# Philia

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  rustfmt.toml  splashscreen.html  vite.config.ts
.github/workflows/: continuous_build.yml  nightly.yml  rust.yml
sources/: E621.json
src/: app.tsx  appbar.tsx  application.rs  download.rs  drawer.tsx  main.rs  main.tsx  search.rs  splashscreen.tsx  style.css  style.rs  themes.tsx
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/sources/: Danbooru.json  Danbooru.rhai  E621.rhai  E926.rhai  Gelbooru.json  Gelbooru.rhai  Rule34.json  Rule34.rhai  Safebooru.rhai
src-tauri/src/: context.rs  datasets.rs  download.rs  images.rs  main.rs  settings.rs  sources.rs  update.rs
src/Philia/: Philia.csproj  Post.cs  Source.cs  Tag.cs
src/Philia.GUI/: App.axaml  App.axaml.cs  GlobalUsings.cs  Philia.GUI.csproj  ViewLocator.cs
src/Philia.GUI.Android/: MainActivity.cs  Philia.GUI.Android.csproj
src/Philia.GUI.Android/Properties/: AndroidManifest.xml
src/Philia.GUI.Desktop/: Philia.GUI.Desktop.csproj  Program.cs  app.manifest
src/Philia.GUI.iOS/: AppDelegate.cs  Info.plist  Main.cs  Philia.GUI.iOS.csproj
src/Philia.GUI.iOS/Resources/: LaunchScreen.xib
src/Philia.GUI/Components/: ImageGrid.axaml  ImageGrid.axaml.cs  ImageGridImage.axaml  ImageGridImage.axaml.cs  SearchBar.axaml  SearchBar.axaml.cs
src/Philia.GUI/Models/: ImageSet.cs  Plugin.cs
src/Philia.GUI/ViewModels/: DownloadsViewModel.cs  GalleryViewModel.cs  MainViewModel.cs  SearchViewModel.cs  ViewModelBase.cs
src/Philia.GUI/Views/: MainView.axaml  MainView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PostView.axaml  PostView.axaml.cs  PostWindow.axaml  PostWindow.axaml.cs
src/Philia.GUI/Views/Datasets/: DatasetsTab.axaml  DatasetsTab.axaml.cs
src/Philia.GUI/Views/Downloads/: DownloadsTab.axaml  DownloadsTab.axaml.cs
src/Philia.GUI/Views/Gallery/: GalleryTab.axaml  GalleryTab.axaml.cs
src/Philia.GUI/Views/Plugins/: PluginsTab.axaml  PluginsTab.axaml.cs
src/Philia.GUI/Views/Search/: SearchControls.axaml  SearchControls.axaml.cs  SearchTab.axaml  SearchTab.axaml.cs
src/Philia.GUI/Views/Settings/: SettingsTab.axaml  SettingsTab.axaml.cs
src/Philia.Sources.Danbooru/: Boorus.cs  EmbeddedTags.cs  Philia.Sources.Danbooru.csproj
src/Philia.Sources.Rule34/: Philia.Sources.Rule34.csproj  Rule34.cs
src/Philia.Sources.Safebooru/: Philia.Sources.Safebooru.csproj  Safebooru.cs
src/bindings/: images.ts
src/components/: images.tsx
src/download/: context.rs
src/gui/: mod.rs  post_image_list.rs  post_preview.rs  top_bar.rs
src/post_viewer/: context.rs  interface.rs
src/preview/: context.rs  interface.rs  mod.rs
src/search/: context.rs  interface.rs
src/settings/: context.rs  interface.rs  mod.rs
src/tabs/: datasets.tsx  images.tsx  search.tsx  settings.tsx
src/tags/: context.rs  interface.rs
