[package]
name = "philia_gui"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
reqwest = "0.11.13"
notify-rust = "4.6.0"
iced_native = "0.8.0"
native-dialog = "0.6.3"
philia = { path = "../philia" }
strum = { version = "0.24", features = ["derive"] }
iced = { version = "0.7.0", features = ["image", "tokio"] }

[profile.dev.package."*"]
opt-level = 3

[profile.production]
inherits = "release"
lto = true
strip = true