[package]
name = "philia_gui"
version = "1.0.0"
description = "An easy to use imageboard scraper."
authors = ["Massimo Bertozzi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
png = "0.17.8"
tokio = "1.28.2"
image = "0.24.6"
serde_json = "1.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
philia = { git = "https://github.com/MaximumOverflow/Philia", rev = "deee069", features = ["additional_post_metadata"] }
tauri = { version = "1.2", features = ["dialog-open", "dialog-save", "fs-write-file", "path-all", "protocol-asset", "shell-open"] }

[profile.dev.package."*"]
opt-level = 3

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
