[package]
name = "philia_gui"
version = "0.1.4"
description = "An easy to use imageboard scraper."
authors = ["Massimo Bertozzi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
png = "0.17.8"
rayon = "1.7.0"
dunce = "1.0.4"
tokio = "1.28.2"
image = "0.24.6"
fxhash = "0.2.1"
cached = "0.43.0"
base64 = "0.21.2"
serde_json = "1.0"
tempfile = "3.5.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
self_update = { version = "0.36", features = ["archive-zip", "compression-flate2", "compression-zip-deflate", "compression-zip-bzip2"] }
philia = { git = "https://github.com/MaximumOverflow/Philia", rev = "baadc182", features = ["additional_post_metadata", "scripting"] }
tauri = { version = "1.2", features = ["dialog-all", "fs-remove-file", "fs-write-file", "path-all", "protocol-asset", "shell-open"] }

[profile.dev.package."*"]
opt-level = 3

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
